--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-    "projects": [],
-    "rewrites": [],
-    "redirects": [],
-    "headers": [],
-    "cleanUrls": true,
-    "trailingSlash": false,
-    "outputDirectory": "FYP-web/Homepage"
+    "rootDirectory": "FYP-web/Homepage"
   }
